# Xaq

./: .clang-format  CMakeLists.txt  LICENSE  START.md
examples/: hello_world.xq
include/backend/: environment.h  evaluator.h  function.h
include/core/: callable.h  value.h  value_type.h
include/frontend/: ast.h  lexer.h  parser.h  token.h
src/: main.cpp
src/backend/: environment.cpp  evaluator.cpp  function.cpp
src/core/: value.cpp
src/frontend/: lexer.cpp  parser.cpp
